--- a/AUTHORS
+++ b/AUTHORS
@@ -2,3 +2,5 @@
 
 Ezra Nobrega <ezra.nobrega@outlook.com>
 Justin Majetich <justinmajetich@gmail.com>
+Kolade Fatai Opeyemi  <adedayo924@gmail.com>
+Balikiz Ogundotun <ogundotunbalkiss@gmail.com>
